--- a/working.html
+++ b/working.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>working on it..</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaQure.css">
     <link id="favicon" rel="icon" href="frame1.png" type="image/png">
 </head>
 <style>
@@ -45,8 +46,7 @@
 
     <div class="notice">
         <h2>working on it. Promise ( ´･･)ﾉ(._.`)</h2>
-        <h3>if you still really <a href="index.html" target="_blank" class="interactable" data-type="link">wanna</a> you
-            can see it.</h3>
+        <h2><a><i onclick="spin(this)" class="fa-solid fa-fan"></i></a></h2>
     </div>
 
 </body>
