--- a/working.html
+++ b/working.html
@@ -40,9 +40,9 @@
         <i id="trailerIcon" class="fa-solid fa-link"></i>
     </div>
 
-    <div>
+<!--<div>
         <img id="animatedImage" src="frame1.png" alt="pokeball">
-    </div>
+    </div>-->
 
     <div class="notice">
         <h2>working on it. Promise ( ´･･)ﾉ(._.`)</h2>
