--- a/htmlFiles/working.html
+++ b/htmlFiles/working.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>working on it..</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mediaQure.css">
-    <link id="favicon" rel="icon" href="assects/master-ball/_a_frm0,30.png" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mediaQure.css">
+    <link id="favicon" rel="icon" href="frame1.png" type="image/png">
 </head>
 <style>
 
@@ -50,7 +50,7 @@
     </div>
 
 </body>
-<script src="jsFiles/jsAnimate.js"></script>
-<script src="jsFiles/main.js"></script>
+<script src="../jsFiles/jsAnimate.js"></script>
+<script src="../jsFiles/main.js"></script>
 
 </html>
