--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <div id="mainLogo" class="interactable" data-type="js">myJavascript <a><i onclick="spin(this)" class="fa-solid fa-fan"></i></a></div>
 
                     <div id="navLinks">
-                        <a href="working.html" target="_blank" class="interactable" data-type="link">home</a>
-                        <a href="working.html" target="_blank" class="interactable" data-type="link">aboutUs</a>
-                        <a href="working.html" target="_blank" class="interactable" data-type="link">history</a>
-                        <a href="working.html" target="_blank" class="interactable" data-type="link">work</a>
+                        <a href="htmlFiles/working.html" target="_blank" class="interactable" data-type="link">home</a>
+                        <a href="htmlFiles/working.html" target="_blank" class="interactable" data-type="link">aboutUs</a>
+                        <a href="htmlFiles/working.html" target="_blank" class="interactable" data-type="link">history</a>
+                        <a href="htmlFiles/working.html" target="_blank" class="interactable" data-type="link">work</a>
                     </div>
                 </nav>
             </section>
