--- a/htmlFiles/working.html
+++ b/htmlFiles/working.html
@@ -7,7 +7,7 @@
     <title>working on it..</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mediaQure.css">
-    <link id="favicon" rel="icon" href="frame1.png" type="image/png">
+    <link id="favicon" rel="icon" href="../assects/master-ball/_a_frm0,30.png" type="image/png">
 </head>
 <style>
 
