--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
                                 <div class="carousel-content">
                                   
                                   <div class="slide slide-1">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-2">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-1">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-2">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-1">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-2">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-1">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                   <div class="slide slide-2">
-                                    <img src="assects/rust-logo.png" alt="rusty logo">
+                                    <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                                   </div>
                                 
                                 </div>
