--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                 <img onclick="spin(this)" title="best one to spin" src="assects/C++_Logo.png" alt="rusty logo">
                             </div>
                             <div class="slide slide-1">
-                                <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/Inkscape-logo.svg" alt="rusty logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/calligrakrita..png" alt="rusty logo">
                             </div>
 
                         </div>
@@ -99,7 +99,7 @@
                     <a><i onclick="spin(this)" class="fa-solid fa-hurricane"></i></a>
                 </div>
 
-                <h4 class="interactable" data-type="author">Made by Palkesh</h4>
+                <h4 class="interactable" data-type="author" title="with etsu's help">Made by Palkesh</h4>
 
             </section>
         </footer>
