--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OnClick</title>
+    <title>myJavascript</title>
     <link rel="shortcut icon" href="assects/spider-solid.svg" type="image/x-icon" class="favicon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mediaQure.css">
