--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="carousel-content">
 
                             <div class="slide slide-1">
-                                <img onclick="spin(this)" src="assects/gologo.png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/go_logo.png" alt="rusty logo">
                             </div>
                             <div class="slide slide-2">
                                 <img onclick="spin(this)" src="assects/JavaScript-logo.png" alt="rusty logo">
@@ -70,7 +70,7 @@
                                 <img onclick="spin(this)" src="assects/Inkscape-logo.svg" alt="rusty logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" src="assects/calligrakrita..png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/krita_logo.png" alt="rusty logo">
                             </div>
 
                         </div>
