--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
                         <div class="carousel-content">
 
                             <div class="slide slide-1">
-                                <img onclick="spin(this)" src="assects/go_logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/go_logo.png" alt="gopher logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" src="assects/JavaScript-logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/JavaScript-logo.png" alt="why">
                             </div>
                             <div class="slide slide-1">
                                 <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" title="here to fill space" src="assects/Typescript_logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" title="here to fill space" src="assects/Typescript_logo.png" alt="ts logo">
                             </div>
                             <div class="slide slide-1">
-                                <img onclick="spin(this)" title="my fav" src="assects/Lua-Logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" title="my fav" src="assects/Lua-Logo.png" alt="lua logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" title="best one to spin" src="assects/C++_Logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" title="best one to spin" src="assects/C++_Logo.png" alt="cpp logo">
                             </div>
                             <div class="slide slide-1">
-                                <img onclick="spin(this)" src="assects/Inkscape-logo.svg" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/Inkscape-logo.svg" alt="inkMountain">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" src="assects/krita_logo.png" alt="rusty logo">
+                                <img onclick="spin(this)" src="assects/krita_logo.png" alt="love to draw">
                             </div>
 
                         </div>
