--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
                                 <img onclick="spin(this)" src="assects/rust-logo.png" alt="rusty logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" title="here to fill space" src="assects/Typescript_logo.png" alt="ts logo">
+                                <img onclick="spin(this)" title="here to fill space" src="assects/Typescript_logo.png"
+                                    alt="ts logo">
                             </div>
                             <div class="slide slide-1">
                                 <img onclick="spin(this)" title="my fav" src="assects/Lua-Logo.png" alt="lua logo">
                             </div>
                             <div class="slide slide-2">
-                                <img onclick="spin(this)" title="best one to spin" src="assects/C++_Logo.png" alt="cpp logo">
+                                <img onclick="spin(this)" title="best one to spin" src="assects/C++_Logo.png"
+                                    alt="cpp logo">
                             </div>
                             <div class="slide slide-1">
                                 <img onclick="spin(this)" src="assects/Inkscape-logo.svg" alt="inkMountain">
@@ -80,6 +82,53 @@
                         </div>
                     </div>
 
+                </section>
+
+                <section class="infoText">
+                    <div class="text_div">
+                        <h4 title="no title">Javascript</h4>
+                        <p>Not to be confused with Java or a scripting language. Javascript was created after Java and
+                            carries a similar name but the similarities end there. It runs in browsers and on servers
+                            with nodejs. Javascript is also one of the hated langs. <span class="hide_p"> Even as a normie
+                            you can understand that issue just right click anywhere in your browser to open the right click
+                            menu > inspect > console. Then type <span class="imp_txt">&nbsp;&nbsp;"11" + 1&nbsp;&nbsp;&nbsp;</span> in
+                            the console, hit enter and you would see the answer... which is kinda correct. Now <span
+                            class="imp_txt">&nbsp;&nbsp;"11" - 1&nbsp;&nbsp;&nbsp;</span>... you see the glaring issue?
+                            not even the worst of it..</span><span class="hide_not">Even as a normie you can understand
+                            that issue.. <span class="imp_txt">&nbsp;&nbsp;"11" + 1 = "111"&nbsp;&nbsp;</span> okayish yea? js joined them and 
+                            wrote them together, but then <span class="imp_txt">&nbsp;&nbsp;"11" - 1 = 10&nbsp;&nbsp;</span>..
+                            Js really really tries not to give you an error so it actually just substracts it. which 
+                            shouldn't happen..</span>
+                        </p>
+                    </div>
+                    <div class="text_div">
+                        <h4>Title Text</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, impedit ducimus nostrum amet
+                            architecto beatae ad, et a, dolores tempore error tempora fugit. Provident praesentium iusto
+                            accusantium quis sit assumenda officia veritatis labore recusandae, animi officiis vel in
+                            perferendis fuga!</p>
+                    </div>
+                    <div class="text_div">
+                        <h4>Title Text</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, impedit ducimus nostrum amet
+                            architecto beatae ad, et a, dolores tempore error tempora fugit. Provident praesentium iusto
+                            accusantium quis sit assumenda officia veritatis labore recusandae, animi officiis vel in
+                            perferendis fuga!</p>
+                    </div>
+                    <div class="text_div">
+                        <h4>Title Text</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, impedit ducimus nostrum amet
+                            architecto beatae ad, et a, dolores tempore error tempora fugit. Provident praesentium iusto
+                            accusantium quis sit assumenda officia veritatis labore recusandae, animi officiis vel in
+                            perferendis fuga!</p>
+                    </div>
+                    <div class="text_div">
+                        <h4>Title Text</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, impedit ducimus nostrum amet
+                            architecto beatae ad, et a, dolores tempore error tempora fugit. Provident praesentium iusto
+                            accusantium quis sit assumenda officia veritatis labore recusandae, animi officiis vel in
+                            perferendis fuga!</p>
+                    </div>
                 </section>
             </section>
 
