--- a/index.html
+++ b/index.html
@@ -102,11 +102,8 @@
                         </p>
                     </div>
                     <div class="text_div">
-                        <h4>Title Text</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, impedit ducimus nostrum amet
-                            architecto beatae ad, et a, dolores tempore error tempora fugit. Provident praesentium iusto
-                            accusantium quis sit assumenda officia veritatis labore recusandae, animi officiis vel in
-                            perferendis fuga!</p>
+                        <h4 title="next up">Go</h4>
+                        <p>What if C++ was created again in the new age.. thats GOlang.</p>
                     </div>
                     <div class="text_div">
                         <h4>Title Text</h4>
